read maps from XML, convert into PacManGameGrid